--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,15 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "emoji-mart": "^3.0.1",
+    "emoji-picker-react": "^3.4.8",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.24.3"
   },
   "devDependencies": {
+    "@types/emoji-mart": "^3.0.6",
     "@types/react": "17.0.21",
     "autoprefixer": "^10.3.4",
     "eslint": "7.32.0",
