--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watchAll",
+    "coverage": "jest --coverage --watchAll"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -22,11 +24,15 @@
     "react-query": "^3.24.3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.0",
     "@types/emoji-mart": "^3.0.6",
     "@types/react": "17.0.21",
     "autoprefixer": "^10.3.4",
+    "babel-jest": "^27.2.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "jest": "^27.2.1",
     "postcss": "^8.3.6",
     "tailwindcss": "^2.2.15",
     "typescript": "4.4.3"
