--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-query": "^3.24.3"
+    "react-query": "^3.24.3",
+    "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
