All working except for bug where if more than 3 users are using the chat it will broadcast the message to the 3rd user as well...

--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@types/cors": "^2.8.12",
     "argon2": "^0.28.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.17.1",
     "prisma": "3.0.2",
     "socket.io": "^4.5.1"
