--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/ws": "^7.4.7",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
@@ -23,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "prisma": "3.0.2",
     "socket.io": "^4.5.1"
   }
