--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/ws": "^7.4.7",
@@ -21,6 +22,7 @@
     "@prisma/client": "3.0.2",
     "@types/cors": "^2.8.12",
     "argon2": "^0.28.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
