--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-query": "^3.24.3",
+    "react-spinners": "^0.13.3",
     "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
