--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "@types/react-dom": "^18.0.6",
     "emoji-mart": "^3.0.1",
     "emoji-picker-react": "^3.4.8",
     "next": "11.1.2",
@@ -23,6 +24,7 @@
     "react-dom": "17.0.2",
     "react-query": "^3.24.3",
     "react-spinners": "^0.13.3",
+    "react-toastify": "^9.0.7",
     "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
