--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "3.0.2",
     "@types/cors": "^2.8.12",
     "argon2": "^0.28.2",
+    "cloudinary": "^1.30.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
