--- a/client/package.json
+++ b/client/package.json
@@ -16,16 +16,19 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
+    "@hookform/resolvers": "^2.9.7",
     "@types/react-dom": "^18.0.6",
     "emoji-mart": "^3.0.1",
     "emoji-picker-react": "^3.4.8",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.34.0",
     "react-query": "^3.24.3",
     "react-spinners": "^0.13.3",
     "react-toastify": "^9.0.7",
-    "socket.io-client": "^4.5.1"
+    "socket.io-client": "^4.5.1",
+    "zod": "^3.17.10"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
