--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "prisma": "3.8.0",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "zod": "^3.17.10"
   }
 }
