--- a/client/package.json
+++ b/client/package.json
@@ -17,14 +17,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@hookform/resolvers": "^2.9.7",
-    "@types/react-dom": "^18.0.6",
     "emoji-mart": "^3.0.1",
     "emoji-picker-react": "^3.4.8",
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "12.1.6",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-hook-form": "^7.34.0",
-    "react-query": "^3.24.3",
+    "@tanstack/react-query": "^4.1.3",
+    "@tanstack/react-query-devtools": "^4.0.10",
     "react-spinners": "^0.13.3",
     "react-toastify": "^9.0.7",
     "socket.io-client": "^4.5.1",
@@ -34,11 +34,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.0",
     "@types/emoji-mart": "^3.0.6",
-    "@types/react": "17.0.21",
+    "@types/react": "18.0.8",
+    "@types/react-dom": "18.0.3",
     "autoprefixer": "^10.3.4",
     "babel-jest": "^27.2.1",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
+    "eslint": "8.14.0",
+    "eslint-config-next": "12.1.6",
     "jest": "^27.2.1",
     "postcss": "^8.3.6",
     "tailwindcss": "^2.2.15",
