--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.ts",
+    "dev": "tsx watch src/server.ts",
     "start": "node dist/src/server.js",
     "build": "tsc -p .",
     "build:production": "npx prisma generate && npx prisma migrate deploy && tsc -p ."
@@ -15,8 +15,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/ws": "^7.4.7",
-    "nodemon": "^2.0.12",
-    "ts-node": "^10.2.1",
+    "tsx": "^4.19.4",
     "typescript": "^4.4.3"
   },
   "dependencies": {
