--- a/server/package.json
+++ b/server/package.json
@@ -5,28 +5,28 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch src/server.ts",
-    "start": "node dist/src/server.js",
+    "start": "node dist/server.js",
     "build": "tsc -p .",
     "build:production": "npx prisma generate && npx prisma migrate deploy && tsc -p ."
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.3",
-    "@types/express": "^4.17.13",
+    "@types/cookie-parser": "^1.4.8",
+    "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/ws": "^7.4.7",
+    "@types/ws": "^8.18.1",
     "tsx": "^4.19.4",
-    "typescript": "^4.4.3"
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@prisma/client": "3.13.0",
     "@types/cors": "^2.8.12",
     "argon2": "^0.28.2",
     "cloudinary": "^1.30.0",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.17.1",
+    "express": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "prisma": "3.13.0",
     "socket.io": "^4.5.1",
