--- a/client/package.json
+++ b/client/package.json
@@ -19,30 +19,26 @@
     "@hookform/resolvers": "^2.9.7",
     "emoji-mart": "^3.0.1",
     "emoji-picker-react": "^3.4.8",
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "next": "15.3.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.34.0",
-    "@tanstack/react-query": "^4.1.3",
-    "@tanstack/react-query-devtools": "^4.0.10",
+    "@tanstack/react-query": "^5.80.6",
+    "@tanstack/react-query-devtools": "^5.80.6",
     "react-spinners": "^0.13.3",
     "react-toastify": "^9.0.7",
     "socket.io-client": "^4.5.1",
     "zod": "^3.17.10"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.0",
     "@types/emoji-mart": "^3.0.6",
-    "@types/react": "18.0.8",
-    "@types/react-dom": "18.0.3",
+    "@types/react": "19.1.6",
+    "@types/react-dom": "19.1.6",
     "autoprefixer": "^10.3.4",
-    "babel-jest": "^27.2.1",
-    "eslint": "8.14.0",
-    "eslint-config-next": "12.1.6",
-    "jest": "^27.2.1",
+    "eslint": "^9.28.0",
+    "eslint-config-next": "^15.3.3",
     "postcss": "^8.3.6",
     "tailwindcss": "^2.2.15",
-    "typescript": "4.4.3"
+    "typescript": "^5.8.3"
   }
 }
