--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "jibber-jabber",
+  "name": "chinwag",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "test": "jest --watchAll",
-    "coverage": "jest --coverage --watchAll"
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.0",
@@ -30,8 +28,8 @@
     "autoprefixer": "^10.3.4",
     "eslint": "^9.28.0",
     "eslint-config-next": "^15.3.3",
-    "postcss": "^8.3.6",
-    "tailwindcss": "^2.2.15",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^4.1.8",
     "typescript": "^5.8.3"
   }
 }
