--- a/client/package.json
+++ b/client/package.json
@@ -10,19 +10,20 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.0",
+    "@tanstack/react-query": "^5.80.6",
+    "@tanstack/react-query-devtools": "^5.80.6",
     "emoji-picker-react": "^4.12.2",
     "next": "15.3.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.57.0",
-    "@tanstack/react-query": "^5.80.6",
-    "@tanstack/react-query-devtools": "^5.80.6",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
     "zod": "^3.25.56"
   },
   "devDependencies": {
+    "@types/node": "^22.15.30",
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.6",
     "autoprefixer": "^10.3.4",
