--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,8 @@
     "@tanstack/react-query-devtools": "^5.80.6",
     "emoji-picker-react": "^4.12.2",
     "next": "15.3.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
@@ -26,11 +26,12 @@
     "@types/node": "^22.15.30",
     "@types/react": "19.1.6",
     "@types/react-dom": "19.1.6",
-    "autoprefixer": "^10.3.4",
+    "@tailwindcss/postcss": "^4.1.8",
+    "tailwindcss": "^4.1.8",
+    "postcss": "^8.5.4",
     "eslint": "^9.28.0",
     "eslint-config-next": "^15.3.3",
-    "postcss": "^8.5.4",
-    "tailwindcss": "^4.1.8",
+    "@eslint/eslintrc": "3.3.1",
     "typescript": "^5.8.3"
   }
 }
